commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/15/2020
+ms.date: 11/17/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: ddc5a79686d37e39b9aeb6a51e86e637fdc9c791
-ms.sourcegitcommit: e087b6a38e3d38625ebb567a973e75b4d79547b9
+ms.openlocfilehash: 9550892f8b8bd9418f26d29ba77a6856a3bb30a0
+ms.sourcegitcommit: fb208f907249cc7aab029afff941a0266c187050
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/15/2020
-ms.locfileid: "94637742"
+ms.lasthandoff: 11/17/2020
+ms.locfileid: "94688383"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -49,7 +49,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Zum Beispiel:
+Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Beispiel:
 
 ```diff
 {
@@ -75,71 +75,29 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 </Project>
 ```
 
-## <a name="update-no-locblazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
+## <a name="update-no-locblazor-webassembly-and-no-locblazor-server-projects"></a>Aktualisieren Blazor WebAssembly und Blazor Server Projekte
 
-Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Projekts einer gehosteten Blazor Lösung, die folgenden Änderungen auf die Projektdatei an:
+*Die Anleitungen in diesem Abschnitt gelten für beide Blazor Hostingmodelle. In den Abschnitten dieses Abschnitts finden Sie zusätzliche Anleitungen für das Hosting von Modellen und App-Typen. Wenden Sie den guidnace aus allen relevanten Abschnitten auf Ihre APP an.*
 
-1. Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.BlazorWebAssembly` :
-
-    ```diff
-    - <Project Sdk="Microsoft.NET.Sdk.Web">
-    + <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
-    ```
-    
-    > [!NOTE]
-    > Dieses Update gilt nur für eigenständige Blazor WebAssembly Projekte und die *`Client`* Projekte gehosteter Blazor Lösungen.
-
-1. Aktualisieren Sie die folgenden Eigenschaften:
+1. `wwwroot/index.html`Fügen Sie in einer- Blazor WebAssembly app oder einer- `Pages/_Host.cshtml` Blazor Server App dem- `<link>` Element für Stile ein-Element hinzu `<head>` . In den folgenden `<link>` Element `href` Attributwerten ist der Platzhalter `{ASSEMBLY NAME}` der AssemblyName der app.
 
     ```diff
-    <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+    +<link href="{ASSEMBLY NAME}.styles.css" rel="stylesheet" />
+    ```
     
-      <PropertyGroup>
-    -     <TargetFramework>netstandard2.1</TargetFramework>
-    -     <RazorLangVersion>3.0</RazorLangVersion>
-    +     <TargetFramework>net5.0</TargetFramework>
-      </PropertyGroup>
-    ```
-
-1. Entfernen Sie den Paket Verweis auf [Microsoft. aspnetcore. Components. Webassembly. Build](https://www.nuget.org/packages/Microsoft.AspNetCore.Components.WebAssembly.Build):
-
-    ```diff
-    <ItemGroup>
-    -    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
-    ```
-
-1. Aktualisieren Sie andere Pakete auf die neuesten Versionen. Die neuesten Versionen finden Sie unter [NuGet.org](https://www.nuget.org).
-
-1. In `wwwroot/index.html`:
-
-   * Fügen Sie `<link>` dem-Element ein-Element für Bereichs bezogene `<head>` Stile hinzu.
-   * Ändern Sie das Element, das die `App` Komponente lädt.
-
-    ```diff
-    +<link href="_framework/scoped.styles.css" rel="stylesheet" />
-    ```
+    Eigenständiges Blazor WebAssembly Beispiel:
     
     ```diff
-    -<app>Loading...</app>
-    +<app id="app">Loading...</app>
+    +<link href="BlazorSample.styles.css" rel="stylesheet" />
     ```
+
+    *`Client`* Projekt eines gehosteten Blazor WebAssembly Lösungs Beispiels:
     
-1. In `Program.Main`:
-
-   * Ändern Sie den Verweis auf das `<app>` Element in einen CSS-Selektor, indem Sie einen Hashwert hinzufügen `#` .
-   * Ändern `HttpClient` Sie die Registrierung in einen Bereich.
-
     ```diff
-    -builder.RootComponents.Add<App>("app");
-    +builder.RootComponents.Add<App>("#app");
-    
-    -builder.Services.AddTransient(sp => new HttpClient 
-    -    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
-    +builder.Services.AddScoped(sp => new HttpClient 
-    +    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
+    +<link href="BlazorSample.Client.styles.css" rel="stylesheet" />
     ```
-    
-1. In `Shared/MainLayout.razor` müssen Sie den gesamten Inhalt eines- `<div>` Elements mit einem von umschließen `id` `page` :
+
+1. Umgeben Sie in der- `Shared/MainLayout.razor` Datei den gesamten Inhalt eines- `<div>` Elements mit dem `class` von `page` :
 
     ```razor
     <div class="page">
@@ -292,10 +250,10 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
         }
     }
     ```
-    
-1. Die neueste Basis `wwwroot/css/app.css` Datei enthält die folgenden Stile. Entfernen Sie zusätzliche Stile, und übernehmen Sie die folgenden Stile und alle, die Sie der app hinzugefügt haben.
 
-    `wwwroot/css/app.css` (Basis Stile, die keine vom Entwickler hinzugefügten Stile einschließen):
+1. Die neueste Basis `wwwroot/css/app.css` Datei einer APP Blazor WebAssembly oder einer `wwwroot/css/site.css` Datei einer Blazor Server app enthält die folgenden Stile. Entfernen Sie zusätzliche Stile, und übernehmen Sie die folgenden Stile und alle, die Sie der app hinzugefügt haben.
+
+    Das folgende Stylesheet umfasst nur Basis Stile und enthält **keine** benutzerdefinierten Stile, die vom Entwickler hinzugefügt wurden:
    
     ```css
     @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
@@ -348,6 +306,63 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
         right: 0.75rem;
         top: 0.5rem;
     }
+    ```
+
+## <a name="update-no-locblazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
+
+Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Projekts einer gehosteten Blazor Lösung, die folgenden Änderungen auf die Projektdatei an:
+
+1. Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.BlazorWebAssembly` :
+
+    ```diff
+    - <Project Sdk="Microsoft.NET.Sdk.Web">
+    + <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+    ```
+    
+    > [!NOTE]
+    > Dieses Update gilt nur für eigenständige Blazor WebAssembly Projekte und die *`Client`* Projekte gehosteter Blazor Lösungen.
+
+1. Aktualisieren Sie die folgenden Eigenschaften:
+
+    ```diff
+    <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+    
+      <PropertyGroup>
+    -     <TargetFramework>netstandard2.1</TargetFramework>
+    -     <RazorLangVersion>3.0</RazorLangVersion>
+    +     <TargetFramework>net5.0</TargetFramework>
+      </PropertyGroup>
+    ```
+
+1. Entfernen Sie den Paket Verweis auf [Microsoft. aspnetcore. Components. Webassembly. Build](https://www.nuget.org/packages/Microsoft.AspNetCore.Components.WebAssembly.Build):
+
+    ```diff
+    <ItemGroup>
+    -    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
+    ```
+
+1. Aktualisieren Sie andere Pakete auf die neuesten Versionen. Die neuesten Versionen finden Sie unter [NuGet.org](https://www.nuget.org).
+
+1. Ändern Sie in `wwwroot/index.html` das Element, das die `App` Komponente lädt:
+    
+    ```diff
+    -<app>Loading...</app>
+    +<app id="app">Loading...</app>
+    ```
+    
+1. In `Program.Main`:
+
+   * Ändern Sie den Verweis auf das `<app>` Element in einen CSS-Selektor, indem Sie einen Hashwert hinzufügen `#` .
+   * Ändern `HttpClient` Sie die Registrierung in einen Bereich.
+
+    ```diff
+    -builder.RootComponents.Add<App>("app");
+    +builder.RootComponents.Add<App>("#app");
+    
+    -builder.Services.AddTransient(sp => new HttpClient 
+    -    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
+    +builder.Services.AddScoped(sp => new HttpClient 
+    +    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
     ```
 
 ### <a name="standalone-no-locblazor-webassembly-app-with-microsoft-accounts"></a>Eigenständige Blazor WebAssembly App mit Microsoft-Konten
@@ -409,7 +424,7 @@ Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standal
 1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
 1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie in folgenden Quellen:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -443,7 +458,7 @@ Aad B2C:
 > <Project Sdk="Microsoft.NET.Sdk.Web">
 > ```
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie in folgenden Quellen:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -452,17 +467,17 @@ Weitere Informationen finden Sie unter
 
 Nach dem Upgrade einer Blazor WebAssembly app, die Aad für die Authentifizierung verwendet, erhalten Sie möglicherweise die folgende Fehlermeldung für den Anmelde Rückruf an die APP, nachdem sich der Benutzer mit Aad angemeldet hat:
 
-> Info: Fehler bei der Autorisierung von Microsoft. aspnetcore. Authorization. defaultauthorizationservice [2]. Diese Anforderungen wurden nicht erfüllt: denyanonymousauthorizationrequirements: erfordert einen authentifizierten Benutzer.
+> Info: Die Autorisierung von Microsoft.AspNetCore.Authorization.DefaultAuthorizationService[2] Authorization ist fehlgeschlagen. Diese Anforderungen wurden nicht erfüllt: DenyAnonymousAuthorizationRequirement: Erfordert einen authentifizierten Benutzer.
 
-Anmelde Rückruf Fehler von Aad:
+Anmelderückruffehler von AAD:
 
 * Fehler: `unauthorized_client`
 * Description (Beschreibung): `AADB2C90058: The provided application is not configured to allow public clients.`
 
 So beheben Sie den Fehler
 
-1. Greifen Sie in der Azure-Portal auf das [Manifest der APP](/azure/active-directory/develop/reference-app-manifest)zu.
-1. Legen Sie das- [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) Attribut auf `null` oder fest `true` .
+1. Greifen Sie im Azure-Portal auf das [Manifest der App](/azure/active-directory/develop/reference-app-manifest) zu.
+1. Legen Sie das Attribut [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) auf `null` oder `true` fest.
 
 ## <a name="update-no-locrazor-class-libraries-rcls"></a>Aktualisieren von Razor Klassenbibliotheken (rcls)
 
@@ -498,7 +513,7 @@ Aktualisieren Sie die folgenden Eigenschaften in der Projektdatei, um eine RCL z
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. entityframeworkcore. *](https://www.nuget.org/packages?q=Microsoft.EntityFrameworkCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Zum Beispiel:
+Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. entityframeworkcore. *](https://www.nuget.org/packages?q=Microsoft.EntityFrameworkCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Beispiel:
 
 ```diff
 <ItemGroup>
