commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 9550892f8b8bd9418f26d29ba77a6856a3bb30a0
-ms.sourcegitcommit: fb208f907249cc7aab029afff941a0266c187050
+ms.openlocfilehash: ea746d0b5292841b0a36f4deaded8fbae8472220
+ms.sourcegitcommit: 54fdca99f30b18d69cf0753ca3c84c7dab8f2b0e
 ms.translationtype: MT
 ms.contentlocale: de-DE
 ms.lasthandoff: 11/17/2020
-ms.locfileid: "94688383"
+ms.locfileid: "94691182"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -85,7 +85,7 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
     +<link href="{ASSEMBLY NAME}.styles.css" rel="stylesheet" />
     ```
     
-    Eigenständiges Blazor WebAssembly Beispiel:
+    Eigenständiges Blazor WebAssembly oder Blazor Server Beispiel:
     
     ```diff
     +<link href="BlazorSample.styles.css" rel="stylesheet" />
@@ -97,7 +97,39 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
     +<link href="BlazorSample.Client.styles.css" rel="stylesheet" />
     ```
 
-1. Umgeben Sie in der- `Shared/MainLayout.razor` Datei den gesamten Inhalt eines- `<div>` Elements mit dem `class` von `page` :
+1. Fügen Sie einen neuen Namespace in die Datei der APP `_Imports.razor` für die [komponentenvirtualisierung](xref:blazor/components/virtualization)ein <xref:Microsoft.AspNetCore.Components.Web.Virtualization?displayProperty=fullName> . In den folgenden `_Imports.razor` Dateien werden die Standardnamespaces in apps angezeigt, die aus den Blazor Projektvorlagen generiert wurden. Der Platzhalter `{ASSEMBLY NAME}` ist der AssemblyName der app.
+
+   Blazor WebAssembly (`_Imports.razor`):
+   
+   ```razor
+   @using System.Net.Http
+   @using System.Net.Http.Json
+   @using Microsoft.AspNetCore.Components.Forms
+   @using Microsoft.AspNetCore.Components.Routing
+   @using Microsoft.AspNetCore.Components.Web
+   @using Microsoft.AspNetCore.Components.Web.Virtualization
+   @using Microsoft.AspNetCore.Components.WebAssembly.Http
+   @using Microsoft.JSInterop
+   @using {ASSEMBLY NAME}
+   @using {ASSEMBLY NAME}.Shared
+   ```
+
+   Blazor Server (`_Imports.razor`):
+   
+   ```razor
+   @using System.Net.Http
+   @using Microsoft.AspNetCore.Authorization
+   @using Microsoft.AspNetCore.Components.Authorization
+   @using Microsoft.AspNetCore.Components.Forms
+   @using Microsoft.AspNetCore.Components.Routing
+   @using Microsoft.AspNetCore.Components.Web
+   @using Microsoft.AspNetCore.Components.Web.Virtualization
+   @using Microsoft.JSInterop
+   @using {ASSEMBLY NAME}
+   @using {ASSEMBLY NAME}.Shared
+   ```
+   
+1. `MainLayout`Umgeben Sie in der `Shared/MainLayout.razor` -Komponente () das HTML-Markup der Komponente mit einem- `<div>` Element, für das ein- `class` Attribut auf festgelegt ist `page` :
 
     ```razor
     <div class="page">
@@ -350,7 +382,7 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
     +<app id="app">Loading...</app>
     ```
     
-1. In `Program.Main`:
+1. In `Program.Main` (`Program.cs`):
 
    * Ändern Sie den Verweis auf das `<app>` Element in einen CSS-Selektor, indem Sie einen Hashwert hinzufügen `#` .
    * Ändern `HttpClient` Sie die Registrierung in einen Bereich.
