commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/17/2020
+ms.date: 11/18/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: ea746d0b5292841b0a36f4deaded8fbae8472220
-ms.sourcegitcommit: 54fdca99f30b18d69cf0753ca3c84c7dab8f2b0e
+ms.openlocfilehash: 22dba2cbb83244d6ac89d61cf09b9019fbe5ca8d
+ms.sourcegitcommit: df808efa68574dd674f1985aa9d03f4f5fab883f
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/17/2020
-ms.locfileid: "94691182"
+ms.lasthandoff: 11/18/2020
+ms.locfileid: "94851194"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -375,11 +375,11 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
 
 1. Aktualisieren Sie andere Pakete auf die neuesten Versionen. Die neuesten Versionen finden Sie unter [NuGet.org](https://www.nuget.org).
 
-1. Ändern Sie in `wwwroot/index.html` das Element, das die `App` Komponente lädt:
+1. `wwwroot/index.html`Ändern Sie in das-Element, das die-Komponente lädt, in ein-Element, das `App` `<div>` `id` auf festgelegt ist `app` :
     
     ```diff
     -<app>Loading...</app>
-    +<app id="app">Loading...</app>
+    +<div id="app">Loading...</div>
     ```
     
 1. In `Program.Main` (`Program.cs`):
@@ -456,7 +456,7 @@ Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standal
 1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
 1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie in folgenden Quellen:
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -471,17 +471,22 @@ Für Aad:
 
 ```diff
 -<PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="..." />
-+<PackageReference Include="Microsoft.Identity.Web" Version="1.2.0" />
-+<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web" Version="{VERSION}" />
++<PackageReference Include="Microsoft.Identity.Web.UI" Version="{VERSION}" />
 ```
 
 Aad B2C:
 
 ```diff
 -<PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="..." />
-+<PackageReference Include="Microsoft.Identity.Web" Version="1.2.0" />
-+<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web" Version="{VERSION}" />
++<PackageReference Include="Microsoft.Identity.Web.UI" Version="{VERSION}" />
 ```
+
+Bestimmen Sie für die vorangehenden Paket Verweise die Paketversionen für die `{VERSION}` Platzhalter unter NuGet.org:
+
+* [`Microsoft.Identity.Web`](https://www.nuget.org/packages/Microsoft.Identity.Web)
+* [`Microsoft.Identity.Web.UI`](https://www.nuget.org/packages/Microsoft.Identity.Web.UI)
 
 > [!NOTE]
 > Das SDK des *`Server`* Projekts in einer gehosteten Blazor WebAssembly Lösung bleibt bestehen `Microsoft.NET.Sdk.Web` :
@@ -490,7 +495,7 @@ Aad B2C:
 > <Project Sdk="Microsoft.NET.Sdk.Web">
 > ```
 
-Weitere Informationen finden Sie in folgenden Quellen:
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
