commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 22dba2cbb83244d6ac89d61cf09b9019fbe5ca8d
-ms.sourcegitcommit: df808efa68574dd674f1985aa9d03f4f5fab883f
+ms.openlocfilehash: 8848fa766c5e88a97d86c15aa01abb9e75bba7c4
+ms.sourcegitcommit: 9cb24e5d061f951a7b802b1cb18e2cf57ac42b4b
 ms.translationtype: MT
 ms.contentlocale: de-DE
 ms.lasthandoff: 11/18/2020
-ms.locfileid: "94851194"
+ms.locfileid: "94881639"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -342,6 +342,8 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 
 ## <a name="update-no-locblazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
 
+Befolgen Sie die Anweisungen im vorherigen Abschnitt zu [Updates Blazor WebAssembly und Blazor Server Projekten](#update-blazor-webassembly-and-blazor-server-projects) .
+
 Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Projekts einer gehosteten Blazor Lösung, die folgenden Änderungen auf die Projektdatei an:
 
 1. Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.BlazorWebAssembly` :
@@ -399,6 +401,8 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
 
 ### <a name="standalone-no-locblazor-webassembly-app-with-microsoft-accounts"></a>Eigenständige Blazor WebAssembly App mit Microsoft-Konten
 
+Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
+
 Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) für Microsoft-Konten zu verwenden:
 
 * Die APP erfordert die `openid` `offline_access` Bereiche und:
@@ -408,13 +412,17 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
   options.ProviderOptions.DefaultAccessTokenScopes.Add("offline_access");
   ```
   
-* Legen Sie auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** die Platt Form Konfiguration auf **einseitige Anwendung** mit dem Umleitungs-URI der APP fest.
+* Auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
 
-* Deaktivieren Sie auf dem Blatt " **Authentifizierung** " auch die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
+  1. Entfernen Sie die **Webplattform** -Konfiguration.
+  1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
+  1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-microsoft-accounts>.
 
 ### <a name="standalone-no-locblazor-webassembly-app-with-azure-active-directory-aad"></a>Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD)
+
+Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
 
 Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) zu verwenden:
 
@@ -425,13 +433,17 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
       .Add("https://graph.microsoft.com/User.Read");
   ```
   
-* Legen Sie auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** die Platt Form Konfiguration auf **einseitige Anwendung** mit dem Umleitungs-URI der APP fest.
+* Auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
 
-* Deaktivieren Sie auf dem Blatt " **Authentifizierung** " auch die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
+  1. Entfernen Sie die **Webplattform** -Konfiguration.
+  1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
+  1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
   
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory>.
 
-### <a name="standalone-no-locblazor-app-with-azure-active-directory-aad-b2c"></a>Eigenständige Blazor App mit Azure Active Directory (AAD) B2C
+### <a name="standalone-no-locblazor-webassembly-app-with-azure-active-directory-aad-b2c"></a>Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD) B2C
+
+Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
 
 Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) B2C zu verwenden:
 
@@ -442,26 +454,24 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
   options.ProviderOptions.DefaultAccessTokenScopes.Add("offline_access");
   ```
   
-* Legen Sie auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** die Platt Form Konfiguration auf **einseitige Anwendung** mit dem Umleitungs-URI der APP fest.
+* Auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
 
-* Deaktivieren Sie auf dem Blatt " **Authentifizierung** " auch die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
+  1. Entfernen Sie die **Webplattform** -Konfiguration.
+  1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
+  1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c>.
 
-### <a name="hosted-no-locblazor-webassembly-app-with-azure-active-directory-aad-or-b2c"></a>Gehostete Blazor WebAssembly App mit Azure Active Directory (AAD) oder B2C
-
-*`Client`* Bei der APP-Registrierung einer gehosteten Blazor Lösung, die Aad oder Aad B2C für die Benutzerauthentifizierung verwendet, sollte eine **Single-Page-Anwendung** der Azure apps-Platt Form Konfiguration verwendet werden:
-
-1. Entfernen Sie in der Azure-Portal App-Registrierung für die *`Client`* App die **Webplattform** -Konfiguration.
-1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
-1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
-
-Weitere Informationen finden Sie unter
-
-* <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
-* <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
-
 ### <a name="update-the-server-project-of-a-hosted-no-locblazor-solution"></a>Aktualisieren des Server Projekts einer gehosteten Blazor Lösung
+
+Befolgen Sie die Anweisungen in den vorangehenden Abschnitten:
+
+* [Aktualisieren Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects)
+* [ Blazor WebAssembly Projekte aktualisieren](#update-blazor-webassembly-projects) (Abschnitt)
+* Der Abschnitt, der für den Anbieter der APP mit Azure Active Directory gilt:
+  * [Eigenständige Blazor WebAssembly App mit Microsoft-Konten](#standalone-blazor-webassembly-app-with-microsoft-accounts)
+  * [Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD)](#standalone-blazor-webassembly-app-with-azure-active-directory-aad)
+  * [Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD) B2C](#standalone-blazor-webassembly-app-with-azure-active-directory-aad-b2c)
 
 Aktualisieren Sie das *`Server`* Projekt einer gehosteten Blazor Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.
 
@@ -499,6 +509,35 @@ Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
+
+### <a name="clean-and-rebuild-the-solution"></a>Bereinigen und Neuerstellen der Projekt Mappe
+
+Nachdem Sie die APP oder Lösung zu .net 5 migriert haben, müssen Sie die APP oder Projekt Mappe bereinigen und neu erstellen Wenn Paket Inkompatibilitäten zwischen neuen Paket verweisen und zwischengespeicherten Paketen vorhanden sind:
+
+1. Löschen Sie die nuget-Paket Caches, indem Sie den folgenden [`dotnet nuget locals`](/dotnet/core/tools/dotnet-nuget-locals) Befehl in einer Befehlsshell ausführen:
+
+   ```dotnetcli
+   dotnet nuget locals --clear all
+   ```
+   
+1. Bereinigen und erneutes Erstellen der APP oder Projekt Mappe.
+
+### <a name="troubleshoot"></a>Problembehandlung
+
+Befolgen Sie *die Anleitung zur* Problembehandlung am Ende des Blazor WebAssembly Sicherheits Themas, das für Ihre APP gilt:
+
+Eigenständige Blazor WebAssembly-Apps:
+
+* [Allgemeiner Leitfaden für OIDC-Anbieter und die WebAssembly-Authentifizierungsbibliothek](xref:blazor/security/webassembly/standalone-with-authentication-library)
+* [Microsoft-Konten](xref:blazor/security/webassembly/standalone-with-microsoft-accounts)
+* [Azure Active Directory (AAD)](xref:blazor/security/webassembly/standalone-with-azure-active-directory)
+* [Azure Active Directory (AAD) B2C](xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c)
+
+Gehostete Blazor WebAssembly-Apps:
+
+* [Azure Active Directory (AAD)](xref:blazor/security/webassembly/hosted-with-azure-active-directory)
+* [Azure Active Directory (AAD) B2C](xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c)
+* [Identity Server](xref:blazor/security/webassembly/hosted-with-identity-server)
 
 ### <a name="unauthorized-client-for-azure-active-directory-aad"></a>Nicht autorisierter Client für Azure Active Directory (AAD)
 
