commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/18/2020
+ms.date: 11/19/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 8848fa766c5e88a97d86c15aa01abb9e75bba7c4
-ms.sourcegitcommit: 9cb24e5d061f951a7b802b1cb18e2cf57ac42b4b
+ms.openlocfilehash: 76595d0d119b869fdde50e3ecba4556315c579ee
+ms.sourcegitcommit: d29535ea0b4197443fd884aaa6e5b4b763d04fc7
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/18/2020
-ms.locfileid: "94881639"
+ms.lasthandoff: 11/19/2020
+ms.locfileid: "94920715"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -462,12 +462,29 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
 
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c>.
 
+### <a name="hosted-no-locblazor-webassembly-app-with-azure-active-directory-aad-or-aad-b2c"></a>Gehostete Blazor WebAssembly App mit Azure Active Directory (AAD) oder Aad B2C
+
+Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
+
+*`Client`* Bei der APP-Registrierung einer gehosteten Blazor Lösung, die Aad oder Aad B2C für die Benutzerauthentifizierung verwendet, sollte eine **Single-Page-Anwendung** für die Azure-Apps-Plattform konfiguriert werden.
+
+Auf dem *`Client`* Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
+
+  1. Entfernen Sie die **Webplattform** -Konfiguration.
+  1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
+  1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
+
+Weitere Informationen finden Sie unter
+
+* <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
+* <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
+
 ### <a name="update-the-server-project-of-a-hosted-no-locblazor-solution"></a>Aktualisieren des Server Projekts einer gehosteten Blazor Lösung
 
 Befolgen Sie die Anweisungen in den vorangehenden Abschnitten:
 
 * [Aktualisieren Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects)
-* [ Blazor WebAssembly Projekte aktualisieren](#update-blazor-webassembly-projects) (Abschnitt)
+* [Aktualisieren von Blazor WebAssembly Projekten](#update-blazor-webassembly-projects)
 * Der Abschnitt, der für den Anbieter der APP mit Azure Active Directory gilt:
   * [Eigenständige Blazor WebAssembly App mit Microsoft-Konten](#standalone-blazor-webassembly-app-with-microsoft-accounts)
   * [Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD)](#standalone-blazor-webassembly-app-with-azure-active-directory-aad)
