commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 76595d0d119b869fdde50e3ecba4556315c579ee
-ms.sourcegitcommit: d29535ea0b4197443fd884aaa6e5b4b763d04fc7
+ms.openlocfilehash: 34ea75e7537bfb8b2255f4c8f8bf8f433db12449
+ms.sourcegitcommit: aa85f2911792a1e4783bcabf0da3b3e7e218f63a
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/19/2020
-ms.locfileid: "94920715"
+ms.lasthandoff: 11/23/2020
+ms.locfileid: "95417655"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -77,7 +77,7 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 
 ## <a name="update-no-locblazor-webassembly-and-no-locblazor-server-projects"></a>Aktualisieren Blazor WebAssembly und Blazor Server Projekte
 
-*Die Anleitungen in diesem Abschnitt gelten für beide Blazor Hostingmodelle. In den Abschnitten dieses Abschnitts finden Sie zusätzliche Anleitungen für das Hosting von Modellen und App-Typen. Wenden Sie den guidnace aus allen relevanten Abschnitten auf Ihre APP an.*
+*Die Anleitungen in diesem Abschnitt gelten für beide Blazor Hostingmodelle. In den Abschnitten dieses Abschnitts finden Sie zusätzliche Anleitungen für das Hosting von Modellen und App-Typen. Wenden Sie die Anleitungen aus allen relevanten Abschnitten auf Ihre APP an.*
 
 1. `wwwroot/index.html`Fügen Sie in einer- Blazor WebAssembly app oder einer- `Pages/_Host.cshtml` Blazor Server App dem- `<link>` Element für Stile ein-Element hinzu `<head>` . In den folgenden `<link>` Element `href` Attributwerten ist der Platzhalter `{ASSEMBLY NAME}` der AssemblyName der app.
 
