commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/19/2020
+ms.date: 11/24/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 34ea75e7537bfb8b2255f4c8f8bf8f433db12449
-ms.sourcegitcommit: aa85f2911792a1e4783bcabf0da3b3e7e218f63a
+ms.openlocfilehash: d33b8170437c3e06d76eba655d206d7272eb9f96
+ms.sourcegitcommit: 59d95a9106301d5ec5c9f612600903a69c4580ef
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/23/2020
-ms.locfileid: "95417655"
+ms.lasthandoff: 11/25/2020
+ms.locfileid: "95870411"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -474,7 +474,7 @@ Auf dem *`Client`* Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
   1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
   1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie unter:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -522,7 +522,7 @@ Bestimmen Sie für die vorangehenden Paket Verweise die Paketversionen für die 
 > <Project Sdk="Microsoft.NET.Sdk.Web">
 > ```
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie unter:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -571,6 +571,17 @@ So beheben Sie den Fehler
 
 1. Greifen Sie im Azure-Portal auf das [Manifest der App](/azure/active-directory/develop/reference-app-manifest) zu.
 1. Legen Sie das Attribut [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) auf `null` oder `true` fest.
+
+## <a name="update-a-no-locblazor-progressive-web-application-pwa"></a>Aktualisieren einer Blazor progressiven Webanwendung (PWA)
+
+Fügen Sie der Projektdatei der PWA-App Folgendes Element hinzu:
+
+```xml
+<ItemGroup>
+  <ServiceWorker Include="wwwroot\service-worker.js" 
+    PublishedContent="wwwroot\service-worker.published.js" />
+</ItemGroup>
+```
 
 ## <a name="update-no-locrazor-class-libraries-rcls"></a>Aktualisieren von Razor Klassenbibliotheken (rcls)
 
