--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/24/2020
+ms.date: 11/30/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: d33b8170437c3e06d76eba655d206d7272eb9f96
-ms.sourcegitcommit: 59d95a9106301d5ec5c9f612600903a69c4580ef
+ms.openlocfilehash: 9092aff3b1a2fc81c9c0892687a0aaf329038ee6
+ms.sourcegitcommit: 43a540e703b9096921de27abc6b66bc0783fe905
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/25/2020
-ms.locfileid: "95870411"
+ms.lasthandoff: 11/30/2020
+ms.locfileid: "96320121"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -49,7 +49,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Beispiel:
+Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Zum Beispiel:
 
 ```diff
 {
@@ -74,6 +74,39 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 
 </Project>
 ```
+
+## <a name="changes-to-no-locblazor-app-routing-logic-in-501"></a>Änderungen an Blazor der APP-Routing Logik in 5.0.1
+
+Die Berechnung der Routen Rangfolge wurde in der Patch-Version ASP.net Core 5.0.1 geändert. Dies kann sich auf Sie auswirken, wenn Sie Catch-All-Routen oder-Routen mit optionalen Parametern definiert haben.
+
+### <a name="old-behavior"></a>Altes Verhalten
+
+Mit dem früheren Verhalten in ASP.net Core 5.0.0 oder früher werden Routen mit niedrigerer Rangfolge (z `{*slug}` . b.) vor Routen mit höherer Rangfolge abgeglichen, z `/customer/{id}` . b..
+
+### <a name="new-behavior"></a>Neues Verhalten
+
+Das neue Verhalten in ASP.net Core 5.0.1 oder höher stimmt genauer mit dem Routing Verhalten überein, das in ASP.net Core-apps definiert ist, wobei das Framework zuerst die Routen Rangfolge für jedes Segment berechnet und festlegt und nur die Länge der Route zum Unterbrechen von Verknüpfungen als sekundäre Kriterien verwendet.
+
+### <a name="reason-for-change"></a>Grund für die Änderung
+
+Das ursprüngliche Verhalten wird in der Implementierung als Fehler betrachtet, da es sich um das Ziel des Routing Systems handelt, das sich auf Blazor die gleiche Weise verhält wie das ASP.net Core Routing System für die Teilmenge der Features, die durch das Routing unterstützt werden Blazor .
+
+### <a name="recommended-action"></a>Empfohlene Maßnahme
+
+Fügen Sie das- `PreferExactMatches` Attribut der `Router` Komponente in `App.razor` der Datei hinzu, um das richtige Verhalten zu abonnieren:
+
+```razor
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="true">
+```
+
+Wenn `PreferExactMatches` auf festgelegt ist `true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
+
+> [!IMPORTANT]
+> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `true` .
+>
+> Die Möglichkeit, die-Option auf festzulegen `false` oder die nicht festgelegte Einstellung zu deaktivieren. diese Option ist standardmäßig auf festgelegt `false` . *is only provided for backward compatibility*
+>
+> Wenn .net 6 veröffentlicht wird, bevorzugt der Router immer exakte Übereinstimmungen, und die `PreferExactMatches` Option ist nicht verfügbar.
 
 ## <a name="update-no-locblazor-webassembly-and-no-locblazor-server-projects"></a>Aktualisieren Blazor WebAssembly und Blazor Server Projekte
 
@@ -617,7 +650,7 @@ Aktualisieren Sie die folgenden Eigenschaften in der Projektdatei, um eine RCL z
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. entityframeworkcore. *](https://www.nuget.org/packages?q=Microsoft.EntityFrameworkCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Beispiel:
+Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. entityframeworkcore. *](https://www.nuget.org/packages?q=Microsoft.EntityFrameworkCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Zum Beispiel:
 
 ```diff
 <ItemGroup>
